--- a/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb
+++ b/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Yayayoute1/setup-development-environment/blob/master/courses/udacity_intro_to_tensorflow_for_deep_learning/l01c01_introduction_to_colab_and_python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Za8-Nr5k11fh"
       },
       "source": [
@@ -91,10 +81,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "X9uIpOS2zx7k",
-        "outputId": "50883d73-c325-46b1-8d7f-217da75b9d91",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "50883d73-c325-46b1-8d7f-217da75b9d91"
       },
       "outputs": [
         {
@@ -169,10 +159,10 @@
       "execution_count": 4,
       "metadata": {
         "id": "m8YQN1H41L-Y",
-        "outputId": "6eb9da91-2fc9-486e-d6d5-f0d8006dee48",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6eb9da91-2fc9-486e-d6d5-f0d8006dee48"
       },
       "outputs": [
         {
@@ -212,10 +202,10 @@
       "execution_count": 3,
       "metadata": {
         "id": "vIgmFZq4zszl",
-        "outputId": "c2095292-cd8e-49b5-94cc-8500c8f2adb7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c2095292-cd8e-49b5-94cc-8500c8f2adb7"
       },
       "outputs": [
         {
@@ -427,8 +417,7 @@
     "colab": {
       "name": "l01c01_introduction_to_colab_and_python.ipynb",
       "toc_visible": true,
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
